<resources>
    <string name="app_name">Location Reminders</string>
    <string name="error_happened">Error happened</string>
    <string name="retry2">Retry</string>
    <string name="no_data">No Data</string>
    <string name="reminder_title">Reminder Title</string>
    <string name="reminder_desc">Description</string>
    <string name="reminder_location">Reminder Location</string>
    <string name="save">Save</string>
    <string name="reminder_saved">Reminder Saved !</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_the_location_reminder_app">Welcome to the location reminder app</string>
    <string name="login">Login</string>
    <string name="title_activity_maps">Map</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
    <string name="location_required_error">Location services must be enabled to use the app</string>
    <string name="permission_denied_explanation">You need to grant location permission in order to select the location. </string>
    <string name="settings">Settings</string>
    <string name="select_poi">Please select a point of interest</string>
    <string name="geofence_entered">Geofence Entered</string>
    <string name="channel_name">GeofenceStatus</string>
    <string name="notification_channel_description">Geofence status notification</string>
    <string name="content_text">Location Reminder</string>
    <string name="select_title">Please select title</string>
    <string name="select_location">Please select location</string>
    <string name="geofence_added">Geofence added</string>
    <string name="geofences_not_added">Problem while adding geofence.</string>
    <string name="welcome">Welcome</string>
    <string name="err_enter_title">Please enter title</string>
    <string name="err_enter_description">Please enter α description</string>
    <string name="err_select_location">Please select location</string>
    <string name="login_unsuccessful_msg">Login unsuccessful</string>
    <string name="no_reminders">There are no reminders</string>
    <!-- Error strings -->
    <string name="geofence_unknown_error">Unknown error: the Geofence service is not available now.</string>
    <string name="geofence_not_available">Geofence service is not available now. Go to Settings>Location>Mode and choose High accuracy.</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences.</string>
    <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call.</string>
    <string name="geofence_insufficient_location_permissions">Cannot add geofence! Insufficient location permissions</string>
    <string name="geofence_request_too_frequent">Geofence requests are too frequent</string>
    <string name="error_adding_geofence">Error Happened, Can\'t Add Geofence</string>
    <string name="test_exception">Test exception</string>
    <!-- COMPLETED: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="map">Map</string>
    <string name="sign_in_with_email">Sign in with email</string>

    <string name="permission_rationale_location">Access to the fine location service is required to acquire \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_denied_no_map_location">Your location on the map will not be available while the location service is disabled!</string>
    <string name="location_permission_denied">This app requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Location Reminders\'.</string>
    <string name="permission_location_required_toast">Geofence permission is required. Cannot create a GeoFence while fine location permission is denied!</string>
    <string name="location_disabled">Location service is disabled. </string>
    <string name="map_location_disabled">For better experience, turn on device location, which uses Google\'s location service.</string>
    <string name="location_enabled_required">The app cannot display your location on the map while the location service is disabled!</string>
    <string name="geofence_error_no_location">Geofence not saved because location services are disabled!</string>
    <string name="open_location_settings">Open location settings</string>
    <string name="cancel">Cancel</string>
    <string name="permission_rationale_geofence">Access to the background location service is required to use \'Geofences\' feature, which notifies you when you are near a saved POI.</string>
    <string name="geofence_background_permission_denied">This app requires "access background location" permission to enable the \'Geofences\' feature. Please try again and grant access to use the background location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Location Reminders\'.</string>
    <string name="geofence_access_fine_location_permission_denied">This app requires "access fine location permission to enable the \'Geofences\' feature. Please try again and grant access to use the fine location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Location Reminders\'.</string>Ω
    <string name="geofence_request_access_fine_location">This app require the access fine location permission in order to create geofences.</string>
    <string name="permission_geofence_required_toast">Background location permission is required for this application.</string>
    <string name="geofence_removed">Geofence removed!</string>
    <string name="geofence_remove_error">Error while removing geofence\n</string>
    <string name="new_reminder">New reminder</string>

    <string name="verify_delete_geofence">Are you sure you want to Delete this location reminder?</string>

    <string name="EXTRA_reminder">EXTRA_REMINDER</string>
    <string name="location">Location</string>
    <string name="longitude">Longitude</string>
    <string name="description">Description</string>
    <string name="latitude">Latitude</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="verify_delete">Are you sure you want to delete this reminder?</string>

    <string name="max_geofences_reached">You cannot add more than %1$d geofences!</string>
    <string name="getreminders_test_exception">Test exception - getReminders</string>
    <string name="getreminder_test_exception">Test exception - getReminder</string>
    <string name="location_not_available_yet">The current loaction is not available </string>
</resources>
