<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <!--Data item that holds the reminder details-->
        <variable
            name="reminderDataItem"
            type="com.udacity.project4.locationreminders.reminderslist.ReminderDataItem" />
    </data>

    <LinearLayout
        android:id="@+id/reminder_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".locationreminders.ReminderDescriptionActivity">
        <!--COMPLETED: add the design of the reminder details-->

        <TextView
            android:id="@+id/reminder_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@{reminderDataItem.title}"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="My location reminder" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/description"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/reminder_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{reminderDataItem.description}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="preview description" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/latitude"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/reminder_latitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{reminderDataItem.latitude.toString()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/longitude"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/reminder_longitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{reminderDataItem.longitude.toString()}"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/location"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/reminder_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{reminderDataItem.location.toString()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            tools:text="Just a preview address 1, Udacity project" />


    </LinearLayout>
</layout>